(feat) Initial menu buttons (fix) Multi-requirement bisect works